styled clear all and save all buttons. coded save all btn to save all tasks on page instead of an individually.

--- a/index.html
+++ b/index.html
@@ -33,6 +33,14 @@
       <p id="currentDay" class="lead"></p>
     </header>
         <h1></h1>
+        <div class="row">
+            <button class="btn saveallBtn col-4 mx-auto justify-content-center" aria-label="clear">
+              <i class="fa fa-save" aria-hidden="true"> SAVE All Entries! </i>
+            </button>
+        <div class="row">
+            <button class="btn clearBtn col-4 mx-auto justify-content-center" aria-label="clear">
+              <i class="fa fa-trash" aria-hidden="true"> CLEAR All Entries! </i>
+            </button>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
