--- a/index.html
+++ b/index.html
@@ -37,10 +37,12 @@
             <button class="btn saveallBtn col-4 mx-auto justify-content-center" aria-label="clear">
               <i class="fa fa-save" aria-hidden="true"> SAVE All Entries! </i>
             </button>
+           </div> 
         <div class="row">
             <button class="btn clearBtn col-4 mx-auto justify-content-center" aria-label="clear">
               <i class="fa fa-trash" aria-hidden="true"> CLEAR All Entries! </i>
             </button>
+        </div>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
