--- a/index.html
+++ b/index.html
@@ -27,10 +27,13 @@
   </head>
 
   <body>
-    <header class="p-5 mb-4 border-5 border-bottom border-dark text-center">
+    <header class="p-2 mb-4 border-5 border-bottom border-dark text-center">
       <h1 class="display-3">Full Day Scheduler</h1>
       <p class="lead">A daily planner app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
+      <p> Click the Blue <i class="fa fa-save" aria-hidden="true"> next to the time block to save.</i></p>
+        <p> Click the Red <i class="fa fa-trash" aria-hidden="true"> next to the time block to delete.</i></p>
+        <p> Gray is past, Green is future, and the present...is now!</p>
     </header>
         <h1></h1>
         <div class="row">
@@ -52,7 +55,7 @@
 
     <script src="./assets/script.js"></script>
     <footer>
-        <h2 class="row m-3 justify-content-center text-center"> Designed, Coded, and Cultivated 🌳 by Ceres 💪 Markley</h2>
+        <p class="row m-3 justify-content-center text-center"> Designed, Coded, and Cultivated 🌳 by Ceres 💪 Markley</p>
     </footer>
   </body>
 </html>
