combined two <p> html objects to reduce space taken in header seen by user.

--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
       <h1 class="display-3">Full Day Scheduler</h1>
       <p class="lead">A daily planner app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
-      <p> Click the Blue <i class="fa fa-save" aria-hidden="true"> next to the time block to save.</i></p>
-        <p> Click the Red <i class="fa fa-trash" aria-hidden="true"> next to the time block to delete.</i></p>
+      <p> Click the Blue <i class="fa fa-save" aria-hidden="true"></i> or the Red <i class="fa fa-trash" aria-hidden="true"> next to the time block to save/delete.</i></p>
         <p> Gray is past, Green is future, and the present...is now!</p>
     </header>
         <h1></h1>
